# sway.module_game

./: .gitmodules  CMakeLists.txt  README.md  install_submodules.py
examples/demo/: CMakeLists.txt  main.cpp  playstate.cpp  playstate.hpp
include/sway/: game.h  game.hpp
include/sway/game/: framework.h  framework.hpp  prereqs.h  prereqs.hpp  settings.h  settings.hpp  subsystem.hpp
include/sway/game/fsm/: statebase.h  statebase.hpp  statemanager.h  statemanager.hpp
lib/include/sway/game/: camera.hpp  framework.hpp  scenenode.hpp
lib/include/sway/game/fsm/: statebase.hpp  statemanager.hpp
lib/src/: framework.cpp  settings.cpp
lib/src/fsm/: statemanager.cpp
src/: framework.cpp  settings.cpp
src/fsm/: statemanager.cpp
